--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guía Interactiva de Juegos de Mesa</title>
+    <title>Ludoteca Gañanes</title>
     <script src="https://cdn.tailwindcss.com"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -23,7 +23,7 @@
             <header class="relative text-left mb-12 flex items-center">
                 
                 <div>
-                    <h1 class="text-4xl md:text-5xl font-bold text-violet-400 mb-2">GUÍA INTERACTIVA DE JUEGOS</h1>
+                    <h1 class="text-4xl md:text-5xl font-bold text-violet-400 mb-2">LUDOTECA GAÑANES</h1>
                     <p class="text-slate-400 max-w-3xl">Resumen interactivo de las recomendaciones del grupo. Filtra y encuentra tu próxima obsesión.</p>
                 </div>
                 <div id="auth-container" class="absolute top-0 right-0 p-4 z-10">
