--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 
                 <div>
                     <h1 class="text-4xl md:text-5xl font-bold text-violet-400 mb-2">LUDOTECA GAÑANES</h1>
-                    <p class="text-slate-400 max-w-3xl">Resumen interactivo de las recomendaciones del grupo. Filtra y encuentra tu próxima obsesión.</p>
+                    <p class="text-slate-400 max-w-3xl">Descubre tu próxima obsesión en la ludoteca de juegos de mesa de los Gañanes Frikis.</p>
                 </div>
                 <div id="auth-container" class="absolute top-0 right-0 p-4 z-10">
                     <!-- Auth content will be injected by JS -->
