--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
 
                         <!-- Filter Bar -->
-                        <div id="filter-bar" class="relative bg-slate-800/50 border border-slate-700 p-4 rounded-xl shadow-lg mb-8 backdrop-filter backdrop-blur-sm flex flex-wrap items-center gap-4 z-20">
+                        <div id="filter-bar" class="sticky top-0 z-30 bg-slate-800/50 border border-slate-700 p-4 rounded-xl shadow-lg mb-8 backdrop-filter backdrop-blur-sm flex flex-wrap items-center gap-4">
                             <div class="flex-grow min-w-[200px] sm:min-w-[300px]">
                                 <input type="search" id="search-input" placeholder="🔍 Buscar por nombre..." class="w-full p-2 bg-slate-700 border border-slate-600 rounded-lg text-slate-200 focus:ring-2 focus:ring-violet-500 focus:border-violet-500">
                             </div>
