feat: Mejorar gestión de modales y flujo de edición

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                      </select>
                                  </div>
                             </div>
-                            <button id="clear-filters-btn" class="btn bg-red-600/80 hover:bg-red-500 border-red-500 !text-white font-bold py-2 px-4 rounded-lg">Limpiar</button>
+                            <button id="clear-filters-btn" class="btn bg-transparent border-slate-600 hover:border-red-500 hover:text-red-400 text-slate-300 py-2 px-4 rounded-lg text-sm">Limpiar</button>
                         </div>
                         <div id="game-grid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6">
                             <!-- Game cards will be rendered here -->
