--- a/index.html
+++ b/index.html
@@ -51,15 +51,19 @@
                                 <!-- Players Filter -->
                                 <div class="relative">
                                     <button id="players-filter-btn" class="filter-btn btn py-2 px-4 rounded-lg">Jugadores ▾</button>
-                                    <div id="players-filter-popover" class="hidden absolute top-full right-0 mt-2 w-48 bg-slate-800 border border-slate-700 rounded-lg shadow-lg z-30 p-4">
-                                        <label for="players-input" class="block text-sm font-semibold text-slate-400 mb-2">Nº exacto</label>
-                                        <input type="number" id="players-input" min="1" max="12" class="w-full p-2 bg-slate-700 border-slate-600 rounded-lg">
+                                    <div id="players-filter-popover" class="hidden absolute top-full right-0 mt-2 w-48 bg-slate-800 border border-slate-700 rounded-lg shadow-lg z-40 p-4 space-y-2">
+                                        <label class="flex items-center"><input type="radio" name="players" value="Todos" checked class="mr-2"> Todos</label>
+                                        <label class="flex items-center"><input type="radio" name="players" value="1" class="mr-2"> 1 Jugador</label>
+                                        <label class="flex items-center"><input type="radio" name="players" value="2" class="mr-2"> 2 Jugadores</label>
+                                        <label class="flex items-center"><input type="radio" name="players" value="3" class="mr-2"> 3 Jugadores</label>
+                                        <label class="flex items-center"><input type="radio" name="players" value="4" class="mr-2"> 4 Jugadores</label>
+                                        <label class="flex items-center"><input type="radio" name="players" value="5+" class="mr-2"> 5+ Jugadores</label>
                                     </div>
                                 </div>
                                 <!-- Time Filter -->
                                 <div class="relative">
                                     <button id="time-filter-btn" class="filter-btn btn py-2 px-4 rounded-lg">Tiempo ▾</button>
-                                    <div id="time-filter-popover" class="hidden absolute top-full right-0 mt-2 w-48 bg-slate-800 border border-slate-700 rounded-lg shadow-lg z-30 p-4">
+                                    <div id="time-filter-popover" class="hidden absolute top-full right-0 mt-2 w-48 bg-slate-800 border border-slate-700 rounded-lg shadow-lg z-40 p-4">
                                         <label for="time-input" class="block text-sm font-semibold text-slate-400 mb-2">Tiempo Máx. (min)</label>
                                         <input type="number" id="time-input" min="10" step="10" class="w-full p-2 bg-slate-700 border-slate-600 rounded-lg">
                                     </div>
