--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
                                 <!-- Time Filter -->
                                 <div class="relative">
                                     <button id="time-filter-btn" class="filter-btn btn py-2 px-4 rounded-lg">Tiempo ▾</button>
-                                    <div id="time-filter-popover" class="hidden absolute top-full right-0 mt-2 w-48 bg-slate-800 border border-slate-700 rounded-lg shadow-lg z-40 p-4">
-                                        <label for="time-input" class="block text-sm font-semibold text-slate-400 mb-2">Tiempo Máx. (min)</label>
-                                        <input type="number" id="time-input" min="10" step="10" class="w-full p-2 bg-slate-700 border-slate-600 rounded-lg">
+                                    <div id="time-filter-popover" class="hidden absolute top-full right-0 mt-2 w-48 bg-slate-800 border border-slate-700 rounded-lg shadow-lg z-40 p-4 space-y-2">
+                                        <label class="flex items-center"><input type="radio" name="time" value="Todos" checked class="mr-2"> Todos</label>
+                                        <label class="flex items-center"><input type="radio" name="time" value="30" class="mr-2"> 30 min</label>
+                                        <label class="flex items-center"><input type="radio" name="time" value="60" class="mr-2"> 60 min</label>
+                                        <label class="flex items-center"><input type="radio" name="time" value="90" class="mr-2"> 90 min</label>
+                                        <label class="flex items-center"><input type="radio" name="time" value="120" class="mr-2"> 120 min</label>
+                                        <label class="flex items-center"><input type="radio" name="time" value="121" class="mr-2"> 120+ min</label>
                                     </div>
                                 </div>
                                 <!-- Complexity Filter -->
