fix: Corregir lógica y labels del filtro de tiempo
Se ha corregido la lógica de filtrado para el tiempo, asegurando que los rangos sean inclusivos/exclusivos según lo especificado.
- Actualizados los labels en  para mayor claridad.
- Ajustada la lógica de  en  para coincidir con los nuevos rangos.
- Añadido el event listener para el filtro de tiempo en .

--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
                                     <button id="time-filter-btn" class="filter-btn btn py-2 px-4 rounded-lg">Tiempo ▾</button>
                                     <div id="time-filter-popover" class="hidden absolute top-full right-0 mt-2 w-48 bg-slate-800 border border-slate-700 rounded-lg shadow-lg z-40 p-4 space-y-2">
                                         <label class="flex items-center"><input type="radio" name="time" value="Todos" checked class="mr-2"> Todos</label>
-                                        <label class="flex items-center"><input type="radio" name="time" value="30" class="mr-2"> 30 min</label>
-                                        <label class="flex items-center"><input type="radio" name="time" value="60" class="mr-2"> 60 min</label>
-                                        <label class="flex items-center"><input type="radio" name="time" value="90" class="mr-2"> 90 min</label>
-                                        <label class="flex items-center"><input type="radio" name="time" value="120" class="mr-2"> 120 min</label>
-                                        <label class="flex items-center"><input type="radio" name="time" value="121" class="mr-2"> 120+ min</label>
+                                        <label class="flex items-center"><input type="radio" name="time" value="<30" class="mr-2"> Hasta 30 min</label>
+                                        <label class="flex items-center"><input type="radio" name="time" value="30-60" class="mr-2"> 31-60 min</label>
+                                        <label class="flex items-center"><input type="radio" name="time" value="60-90" class="mr-2"> 61-90 min</label>
+                                        <label class="flex items-center"><input type="radio" name="time" value=">90" class="mr-2"> Más de 90 min</label>
                                     </div>
                                 </div>
                                 <!-- Complexity Filter -->
