--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
                         <label for="game-name" class="block text-sm font-semibold text-slate-400 mb-1">Nombre del Juego</label>
                         <input type="text" id="game-name" placeholder="Ej: Catan" required class="w-full p-2 bg-slate-700 border border-slate-600 rounded-lg">
                     </div>
+                    <div class="md:col-span-2">
+                        <label for="game-description" class="block text-sm font-semibold text-slate-400 mb-1">Descripción</label>
+                        <textarea id="game-description" placeholder="Una breve descripción del juego..." rows="3" class="w-full p-2 bg-slate-700 border border-slate-600 rounded-lg"></textarea>
+                    </div>
                     <div>
                         <label for="game-players-min" class="block text-sm font-semibold text-slate-400 mb-1">Jugadores Mín.</label>
                         <input type="number" id="game-players-min" min="1" value="1" required class="w-full p-2 bg-slate-700 border border-slate-600 rounded-lg">
@@ -206,19 +210,19 @@
 
     <!-- Game Details Modal -->
     <div id="game-details-modal" class="hidden modal fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 backdrop-filter backdrop-blur-sm p-4">
-        <div id="game-details-content" class="bg-slate-800 rounded-lg shadow-xl w-full max-w-4xl relative border border-slate-700 flex flex-col md:flex-row max-h-[95vh]">
+        <div id="game-details-content" class="bg-slate-800 rounded-lg shadow-xl w-full max-w-6xl relative border border-slate-700 flex flex-col md:flex-row max-h-[95vh]">
             <!-- Close Button -->
             <button id="close-details-modal-btn" class="absolute top-3 right-3 text-slate-400 hover:text-white transition-colors z-10">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" /></svg>
             </button>
 
             <!-- Left Side: Image -->
-            <div class="w-full md:w-1/3 flex-shrink-0 bg-slate-900 rounded-t-lg md:rounded-l-lg md:rounded-t-none">
-                <img id="modal-game-image" src="" alt="Carátula del juego" class="object-contain w-full h-48 md:h-full rounded-t-lg md:rounded-l-lg md:rounded-t-none">
+            <div class="w-full md:w-2/5 flex-shrink-0 bg-slate-900 rounded-t-lg md:rounded-l-lg md:rounded-t-none">
+                <img id="modal-game-image" src="" alt="Carátula del juego" class="object-contain w-full h-64 md:h-full rounded-t-lg md:rounded-l-lg md:rounded-t-none">
             </div>
 
             <!-- Right Side: Details -->
-            <div class="w-full md:w-2/3 p-6 md:p-8 overflow-y-auto">
+            <div class="w-full md:w-3/5 p-6 md:p-8 overflow-y-auto">
                 <h2 id="modal-game-title" class="text-3xl font-bold text-violet-400 mb-2"></h2>
                 <div class="flex items-center text-slate-400 text-sm mb-4 space-x-4 flex-wrap">
                     <span id="modal-game-players" class="mb-2"></span>
@@ -230,7 +234,11 @@
                     <!-- BGG Link and Edit/Delete buttons will be injected here -->
                 </div>
 
-                <div class="space-y-4">
+                <div class="space-y-6">
+                    <div>
+                        <h4 class="text-lg font-semibold text-slate-300 mb-2 border-b border-slate-700 pb-1">Descripción</h4>
+                        <p id="modal-game-description" class="text-slate-400 text-base italic"></p>
+                    </div>
                     <div>
                         <h4 class="text-lg font-semibold text-slate-300 mb-2 border-b border-slate-700 pb-1">Recomendado por</h4>
                         <p id="modal-game-recommended" class="text-slate-400"></p>
