fix: Align logout button with right margin

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h1 class="text-4xl md:text-5xl font-bold text-violet-400 mb-2">LUDOTECA GAÑANES</h1>
                     <p class="text-slate-400 max-w-3xl">Descubre tu próxima obsesión en la ludoteca de juegos de mesa de los Gañanes Frikis.</p>
                 </div>
-                <div id="auth-container" class="absolute top-0 right-0 p-4 z-10 flex items-center gap-2">
+                <div id="auth-container" class="absolute top-0 right-0 z-10 flex items-center gap-2">
                     <!-- Auth content will be managed by JS -->
                     <span id="user-email-display" class="text-sm text-slate-400 hidden"></span>
                     <button id="edit-profile-btn" class="hidden btn bg-transparent border-slate-600 hover:bg-slate-800 hover:border-violet-400 text-slate-300 py-1 px-3 rounded-lg text-sm">Editar Perfil</button>
